get rid of recusrion